src/objects/MarketingPlan__c.object
<CustomObject>
    <description>Marketing Plan Budget records for all levels of the hierarchy.</description>
    <fields>
        <fullName>AllocatedBudget_USD_Formula__c</fullName>
        <formula>ROUND(AllocatedBudget_USD_Hidden__c, 2)</formula>
        <label>MP Allocated Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AllocatedBudget_USD_Hidden__c</fullName>
        <label>MP Allocated Budget USD (Hidden)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AllocatedBudget__c</fullName>
        <description>Sum of all Related Marketing Plan budgets.</description>
        <inlineHelpText>Sum of all Related Marketing Plan budgets.</inlineHelpText>
        <label>MP Allocated Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BrandQuality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Quality</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Tags__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Tags__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brand Quality</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>Marketing Plans (Brand Quality)</relationshipLabel>
        <relationshipName>Marketing_Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Tags__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Brand</value>
            </filterItems>
            <filterItems>
                <field>Tags__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>Marketing Plans (Brand)</relationshipLabel>
        <relationshipName>Marketing_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Changed_From_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System use only. Helps system determine when to capture a Budget Audit Log for Marketing Plans.</description>
        <label>Budget Changed From Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_USD_Formula__c</fullName>
        <formula>ROUND(Budget_USD_Hidden__c, 2)</formula>
        <label>MP Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_USD_Hidden__c</fullName>
        <label>MP Budget USD (Hidden)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>MP Budget</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CYInitialBudget__c</fullName>
        <label>CY Initial Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CampaignBalance__c</fullName>
        <description>(MP Budget - Campaign Budget) if Record Type equals &quot;Campaigns Allowed - Editable&quot; or &quot;Campaigns Allowed - Not Editable&quot;.</description>
        <formula>IF((   RecordType.Name   =&quot;Campaigns Allowed - Editable&quot;),( Budget__c  -  CampaignBudget__c),  IF((RecordType.Name=&quot;Campaigns Allowed - Not Editable&quot;), ( Budget__c  -  CampaignBudget__c), null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MP Budget - Campaign Budget.</inlineHelpText>
        <label>Campaign Unallocated Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CampaignBudgetHidden__c</fullName>
        <description>Sum of all child Campaigns Budgets. This field is hidden on the record and used to populate the &quot;Campaign Budget&quot; field.</description>
        <label>Campaign Allocated Budget Hidden</label>
        <summarizedField>Campaign__c.PlannedCampaignSpend_USD_Hidden__c</summarizedField>
        <summaryForeignKey>Campaign__c.ParentMarketingPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CampaignBudgetNativeHidden__c</fullName>
        <label>Campaign Allocated Budget Native</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CampaignBudget__c</fullName>
        <description>This field is used to populate null values for Marketing Plan records with &quot;Campaigns Prohibited - Editable&quot; and &quot;Campaigns Prohibited - Not Editable&quot; Record Types.</description>
        <formula>IF(CampaignBudgetNativeHidden__c &gt; 0, CampaignBudgetNativeHidden__c , IF(AND((CampaignBudgetNativeHidden__c)=0, CONTAINS( RecordType.Name,&quot;Campaigns Allowed&quot;)),0,NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of all Related Campaign Budgets.</inlineHelpText>
        <label>Campaign Allocated Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Free form text field to allow for comments on any updates made to the Marketing Plan budgets</description>
        <inlineHelpText>Comment field for any updates made to budget.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocktail Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Capabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Coast Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Control Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mideast Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midsouth Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ring Fence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation &amp; Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Coast Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Control Division</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dupe_Key_Text__c</fullName>
        <inlineHelpText>Used to check uniqueness of record.</inlineHelpText>
        <label>Dupe Key - Text</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LYEndingBudget__c</fullName>
        <label>LY Ending Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYInitialBudget__c</fullName>
        <label>LY Initial Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYMarketingPlanName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of LY Marketing Plan.</description>
        <label>LY Marketing Plan Name</label>
        <referenceTo>MarketingPlan__c</referenceTo>
        <relationshipLabel>Marketing Plans (LY Marketing Plan)</relationshipLabel>
        <relationshipName>Marketing_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MP_Level__c</fullName>
        <description>Level in the Hierarchy the Marketing Plan Exists in</description>
        <formula>IF(NOT(ISBLANK(ParentMarketingPlan__r.ParentMarketingPlan__r.ParentMarketingPlan__r.ParentMarketingPlan__r.ParentMarketingPlan__r.Name)), &quot;6&quot;,
IF(NOT(ISBLANK(ParentMarketingPlan__r.ParentMarketingPlan__r.ParentMarketingPlan__r.ParentMarketingPlan__r.Name)), &quot;5&quot;,
IF(NOT(ISBLANK(ParentMarketingPlan__r.ParentMarketingPlan__r.ParentMarketingPlan__r.Name)), &quot;4&quot;,
IF(NOT(ISBLANK(ParentMarketingPlan__r.ParentMarketingPlan__r.Name)), &quot;3&quot;,
IF(NOT(ISBLANK(ParentMarketingPlan__r.Name)), &quot;2&quot;,
&quot;1&quot;
)))))</formula>
        <inlineHelpText>Level in the Hierarchy the Marketing Plan Exists in</inlineHelpText>
        <label>Marketing Plan Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_Type__c</fullName>
        <description>Field used for complex approvals across teams.</description>
        <formula>if(
and( ispickval(Region__c,&quot;National Accounts&quot;), NOT(ISBLANK(Territory__c))),&quot;TERRITORY - NATL ACCTS&quot;,
if(
and( ispickval(Region__c,&quot;National Accounts&quot;),(ISBLANK(Territory__c))),&quot;REGION - NATL ACCTS&quot;,
if(
and( ispickval(Region__c,&quot;National Marketing&quot;), NOT(ISBLANK(Territory__c))),&quot;TERRITORY - NATL MKTG&quot;,
if(
and( ispickval(Region__c,&quot;National Marketing&quot;),(ISBLANK(Territory__c))),&quot;REGION - NATL MKTG&quot;,
if(
NOT(ISBLANK(Territory__c)),&quot;TERRITORY - FIELD&quot;,
if(
NOT(ISPICKVAL(Division__c,&quot;&quot;)),&quot;DIVISION - FIELD&quot;,
if(
NOT(ispickval(Region__c,&quot;&quot;)) ,&quot;REGION - FIELD&quot;,
if(
NOT(isBLANK(Brand__c)) ,&quot;BRAND&quot;,
if(
NOT(ispickval( Country__c ,&quot;&quot;)) ,&quot;COUNTRY&quot;,
&quot;GLOBAL&quot;)))))))))</formula>
        <label>MP Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_IO_Sequence__c</fullName>
        <description>Stores the next available IO ending sequence for all the campaigns under this Marketing Plan. Used by system to auto-generate IO Codes on Campaigns.</description>
        <label>Next IO Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentMarketingPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Marketing Plan</label>
        <referenceTo>MarketingPlan__c</referenceTo>
        <relationshipLabel>Related Marketing Plans</relationshipLabel>
        <relationshipName>Marketing_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Regional Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control States &amp; NA Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control States Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midsouth Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Accounts Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_Company_Code__c</fullName>
        <label>SAP Company Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Controlling_Area__c</fullName>
        <label>SAP Controlling Area</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Cost_Center__c</fullName>
        <label>SAP Cost Center</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Tags__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Territory</value>
            </filterItems>
            <filterItems>
                <field>Tags__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>Marketing Plans</relationshipLabel>
        <relationshipName>Marketing_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnallocatedBudget__c</fullName>
        <description>(MP Budget - MP Allocated Budget) if Record Type equals &quot;Campaigns Prohibited - Editable&quot; or &quot;Campaigns Prohibited - Not Edible&quot;.</description>
        <formula>IF((RecordType.Name=&quot;Campaigns Prohibited - Editable&quot;),(Budget__c  -  AllocatedBudget__c), IF((RecordType.Name =&quot;Campaigns Prohibited - Not Editable&quot;),(Budget__c  -  AllocatedBudget__c), null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MP Budget - MP Allocated Budget.</inlineHelpText>
        <label>MP Unallocated Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2015</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Marketing Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ParentMarketingPlan__c</columns>
        <columns>Year__c</columns>
        <columns>Budget__c</columns>
        <columns>AllocatedBudget__c</columns>
        <columns>UnallocatedBudget__c</columns>
        <columns>CampaignBudget__c</columns>
        <columns>CampaignBalance__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllMarketingPlans2015</fullName>
        <columns>NAME</columns>
        <columns>ParentMarketingPlan__c</columns>
        <columns>Budget__c</columns>
        <columns>AllocatedBudget__c</columns>
        <columns>UnallocatedBudget__c</columns>
        <columns>CampaignBudget__c</columns>
        <columns>CampaignBalance__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <label>All Marketing Plans 2015</label>
    </listViews>
    <listViews>
        <fullName>AllMarketingPlans2016</fullName>
        <columns>NAME</columns>
        <columns>ParentMarketingPlan__c</columns>
        <columns>Budget__c</columns>
        <columns>AllocatedBudget__c</columns>
        <columns>UnallocatedBudget__c</columns>
        <columns>CampaignBudget__c</columns>
        <columns>CampaignBalance__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>All Marketing Plans 2016</label>
    </listViews>
    <listViews>
        <fullName>McClellands_MarketingPlan</fullName>
        <filterScope>Queue</filterScope>
        <label>McClellands</label>
        <queue>McClellands</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Multibrand_MarketingPlan</fullName>
        <filterScope>Queue</filterScope>
        <label>Multibrand</label>
        <queue>Multibrand</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyMarketingPlans2015</fullName>
        <columns>NAME</columns>
        <columns>ParentMarketingPlan__c</columns>
        <columns>Budget__c</columns>
        <columns>AllocatedBudget__c</columns>
        <columns>UnallocatedBudget__c</columns>
        <columns>CampaignBudget__c</columns>
        <columns>CampaignBalance__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <label>My Marketing Plans 2015</label>
    </listViews>
    <listViews>
        <fullName>MyMarketingPlans2016</fullName>
        <columns>NAME</columns>
        <columns>ParentMarketingPlan__c</columns>
        <columns>Budget__c</columns>
        <columns>AllocatedBudget__c</columns>
        <columns>UnallocatedBudget__c</columns>
        <columns>CampaignBudget__c</columns>
        <columns>CampaignBalance__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>My Marketing Plans 2016</label>
    </listViews>
    <listViews>
        <fullName>X2015_National_Account_Off_Premise</fullName>
        <columns>NAME</columns>
        <columns>Budget__c</columns>
        <columns>CampaignBudget__c</columns>
        <columns>CampaignBalance__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>equals</operation>
            <value>NA Off-Premise</value>
        </filters>
        <label>National Account Off Premise Plans 2015</label>
    </listViews>
    <listViews>
        <fullName>X2015_National_Marketing_Plans</fullName>
        <columns>NAME</columns>
        <columns>ParentMarketingPlan__c</columns>
        <columns>Budget__c</columns>
        <columns>CampaignBudget__c</columns>
        <columns>CampaignBalance__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Territory__c</field>
            <operation>equals</operation>
            <value>National Marketing</value>
        </filters>
        <label>National Marketing Plans 2015</label>
    </listViews>
    <nameField>
        <label>Marketing Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Plans</pluralLabel>
    <recordTypes>
        <fullName>Campaigns_Allowed_Editable</fullName>
        <active>false</active>
        <description>Marketing Plan is editable and allows for Campaigns.</description>
        <label>Campaigns Allowed - Editable</label>
    </recordTypes>
    <recordTypes>
        <fullName>Campaigns_Allowed_Not_Editable</fullName>
        <active>true</active>
        <description>Marketing Plan is NOT editable and allows for Campaigns.</description>
        <label>Campaigns Allowed - Not Editable</label>
    </recordTypes>
    <recordTypes>
        <fullName>Campaigns_Prohibited_Editable</fullName>
        <active>false</active>
        <description>Marketing Plan is editable and DOES NOT allow for Campaigns.</description>
        <label>Campaigns Prohibited - Editable</label>
    </recordTypes>
    <recordTypes>
        <fullName>Campaigns_Prohibited_Not_Editable</fullName>
        <active>true</active>
        <description>Marketing Plan is NOT editable and DOES NOT allow for Campaigns.</description>
        <label>Campaigns Prohibited - Not Editable</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Allocated_Budget_lessthanorequal_Budget</fullName>
        <active>true</active>
        <description>A Marketing Plan&apos;s Allocated Budget (or sum of direct child Marketing Plans&apos; Budget) must not be greater than the Marketing Plan&apos;s Budget.</description>
        <errorConditionFormula>AllocatedBudget__c &gt;  Budget__c</errorConditionFormula>
        <errorDisplayField>AllocatedBudget__c</errorDisplayField>
        <errorMessage>MP Allocated Budget cannot exceed MP Budget. Either increase the MP Budget value or decrease the budget value on any associated Marketing Plans.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Balance_lessthan_Budget</fullName>
        <active>true</active>
        <description>Campaign Allocated Budget cannot exceed MP Budget.</description>
        <errorConditionFormula>CampaignBalance__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Budget__c</errorDisplayField>
        <errorMessage>Campaign Allocated Budget cannot exceed MP Budget. Either increase the MP Budget value or decrease the budget value on any associated Campaigns.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_Required_for_MPBudget_Update</fullName>
        <active>true</active>
        <description>A comment is required when changing a Marketing Plan Budget value.</description>
        <errorConditionFormula>and(ischanged( Budget__c ),isblank( Comments__c ),  Budget_Changed_From_Transfer__c  &lt;&gt; true)</errorConditionFormula>
        <errorMessage>A Comment is required when changing a Marketing Plan Budget value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Currency_cannot_change_after_created</fullName>
        <active>true</active>
        <description>To ensure financial data integrity, we have prevented a Marketing Plan&apos;s currency from changing after the record is initially created. If currency change is needed, please create a new MarketingPlan with the correct currency set, and transfer funds.</description>
        <errorConditionFormula>ISCHANGED(CurrencyIsoCode)</errorConditionFormula>
        <errorMessage>To ensure financial data integrity, we have prevented a Marketing Plan&apos;s Currency from changing after the record is initially created. If currency change is needed, please create a new Marketing Plan with the correct Currency, and transfer funds/plans.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Co_Cd_and_Cost_Ctr_Combo</fullName>
        <active>true</active>
        <description>A company code of US30 or USC0 must have a Controlling Area of 2000
A company code of MX10 must have a Controlling Area of 3000</description>
        <errorConditionFormula>or(and(
SAP_Company_Code__c = &apos;US30&apos;,
SAP_Controlling_Area__c &lt;&gt; &apos;2000&apos;
),
and(
SAP_Company_Code__c = &apos;USC0&apos;,
SAP_Controlling_Area__c &lt;&gt; &apos;2000&apos;
),
and(
SAP_Company_Code__c = &apos;MX10&apos;,
SAP_Controlling_Area__c &lt;&gt; &apos;3000&apos;
))</errorConditionFormula>
        <errorMessage>A company code of US30 or USC0 must have a Controlling Area of 2000.
A company code of MX10 must have a Controlling Area of 3000.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPBudgetCannotbeLessThanZero</fullName>
        <active>true</active>
        <description>MP Budget cannot be less than zero dollars.</description>
        <errorConditionFormula>Budget__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Budget__c</errorDisplayField>
        <errorMessage>MP Budget cannot be less than zero dollars. Please update the MP Budget field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_SAP_Reporting_Fields</fullName>
        <active>true</active>
        <description>Confirm values of Company Code and Controlling area.  If additional values are expected for either field, this validation rule should be updated with the new values</description>
        <errorConditionFormula>or(
and(
SAP_Company_Code__c &lt;&gt; &apos;US30&apos;,
SAP_Company_Code__c &lt;&gt; &apos;USC0&apos;,
SAP_Company_Code__c &lt;&gt; &apos;MX10&apos;,
not(isblank(SAP_Company_Code__c))),
and(
SAP_Controlling_Area__c &lt;&gt; &apos;2000&apos;,
SAP_Controlling_Area__c &lt;&gt; &apos;3000&apos;,
not(isblank(SAP_Controlling_Area__c))))</errorConditionFormula>
        <errorMessage>You have entered an invalid Company Code or Controlling Area.  Valid Company Code values are US30, USC0, or MX10.  Valid Controlling Area values are 2000, and 3000</errorMessage>
    </validationRules>
</CustomObject>